--- a/spring-petclinic-web/pom.xml
+++ b/spring-petclinic-web/pom.xml
@@ -17,13 +17,28 @@
 
 	<dependencies>
 		<dependency>
+			<groupId>org.springframework.samples</groupId>
+			<artifactId>spring-petclinic-customers-service</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.samples</groupId>
+			<artifactId>spring-petclinic-vets-service</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.samples</groupId>
+			<artifactId>spring-petclinic-visits-service</artifactId>
+		</dependency>
+
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-actuator</artifactId>
 		</dependency>
+<!--
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
 		</dependency>
+-->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-devtools</artifactId>
@@ -52,15 +67,21 @@
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-data-jpa</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
+<!--
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-config</artifactId>
+		</dependency>
+-->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-validation</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-thymeleaf</artifactId>
 		</dependency>
 	</dependencies>
 
