--- a/spring-petclinic-vets-service/src/test/resources/application.properties
+++ b/spring-petclinic-vets-service/src/test/resources/application.properties
@@ -1,5 +1,8 @@
 #spring.test.database.replace=none
 
+spring.cloud.config.enabled=false
+eureka.client.enabled=false
+
 spring.sql.init.mode=embedded
 spring.sql.init.platform=h2
 spring.sql.init.schema-locations=classpath*:db/h2/schema.sql
