--- a/spring-petclinic-web/src/main/resources/application.properties
+++ b/spring-petclinic-web/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=petclinic-web
-#spring.config.import=configserver:
+spring.config.import=configserver:
 
 # Web
 spring.thymeleaf.mode=HTML
