--- a/spring-petclinic-customers-service/src/test/resources/application.properties
+++ b/spring-petclinic-customers-service/src/test/resources/application.properties
@@ -1,13 +1,8 @@
-#spring.test.database.replace=none
-
 spring.cloud.config.enabled=false
 eureka.client.enabled=false
 
-spring.sql.init.mode=embedded
-spring.sql.init.platform=h2
-spring.sql.init.schema-locations=classpath*:db/h2/schema.sql
-spring.sql.init.data-locations=classpath*:db/h2/data.sql
-spring.sql.init.encoding=UTF-8
+spring.test.database.replace=none
+spring.datasource.url=jdbc:h2:mem:testdb;MODE=MySQL;DATABASE_TO_LOWER=TRUE;CASE_INSENSITIVE_IDENTIFIERS=TRUE
 
 logging.level.org.springframework: INFO
 logging.level.org.springframework.jdbc=TRACE
