--- a/spring-petclinic-vets-service/src/main/resources/application.properties
+++ b/spring-petclinic-vets-service/src/main/resources/application.properties
@@ -1,2 +1,7 @@
 spring.application.name=vets-service
 spring.config.import=configserver:
+
+spring.datasource.url=jdbc:h2:file:./h2db;MODE=MySQL;DATABASE_TO_LOWER=TRUE;CASE_INSENSITIVE_IDENTIFIERS=TRUE
+#spring.datasource.url=jdbc:mysql://localhost/petclinic_vets
+#spring.datasource.username=root
+#spring.datasource.password=password
