--- a/spring-petclinic-visits-service/src/test/resources/application.properties
+++ b/spring-petclinic-visits-service/src/test/resources/application.properties
@@ -2,7 +2,7 @@ spring.cloud.config.enabled=false
 eureka.client.enabled=false
 
 spring.test.database.replace=none
-pring.datasource.url=jdbc:h2:mem:testdb;MODE=MySQL;DATABASE_TO_LOWER=TRUE;CASE_INSENSITIVE_IDENTIFIERS=TRUE
+spring.datasource.url=jdbc:h2:mem:testdb;MODE=MySQL;DATABASE_TO_LOWER=TRUE;CASE_INSENSITIVE_IDENTIFIERS=TRUE
 
 logging.level.org.springframework: INFO
 logging.level.org.springframework.jdbc=TRACE
