--- a/spring-petclinic-config-server/src/main/resources/application.properties
+++ b/spring-petclinic-config-server/src/main/resources/application.properties
@@ -2,7 +2,7 @@ server.port=8888
 spring.application.name=config-server
 
 spring.profiles.active=native
-spring.cloud.config.server.native.searchLocations=file:./config
+spring.cloud.config.server.native.searchLocations=file:./local-dev-config
 
 #---
 spring.config.activate.on-profile=git
